@@ -1,3 +1,3 @@
 GoogleTransitDataFeed transxchange2GoogleTransit
-Copyright 2007, 2008, 2009, 2010, 2011 GoogleTransitDataFeed
+Copyright 2007, 2008, 2009, 2010, 2011, 2012 GoogleTransitDataFeed
 
